[gd_scene load_steps=2 format=3 uid="uid://cx38uabenhpce"]

[ext_resource type="Script" uid="uid://b5meanblygfd8" path="res://Popup/JoinGroupChat/JoinGroupChat.gd" id="1_lnuc2"]

[node name="JoinGroupChat" type="Window"]
auto_translate_mode = 1
title = "Join Group Chat"
position = Vector2i(0, 36)
size = Vector2i(500, 100)
min_size = Vector2i(250, 0)
script = ExtResource("1_lnuc2")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="_" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Group" type="HBoxContainer" parent="PanelContainer/_"]
layout_mode = 2

[node name="Select a Group" type="Label" parent="PanelContainer/_/Group"]
layout_mode = 2
text = "Select a Group"

[node name="GroupsAvailable" type="OptionButton" parent="PanelContainer/_/Group"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="JoinButton" type="Button" parent="PanelContainer/_"]
layout_mode = 2
text = "Join"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="PanelContainer/_/JoinButton" to="." method="_on_join_button_pressed"]
